--- a/converter-module/pkg/package.json
+++ b/converter-module/pkg/package.json
@@ -1,7 +1,10 @@
 {
   "name": "converter-module",
   "type": "module",
-  "version": "0.1.0",
+  "collaborators": [
+    "Tilman Kurmayer"
+  ],
+  "version": "0.1.1",
   "files": [
     "index_bg.wasm",
     "index.js",
