--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "converter-module": "file:../converter-module/pkg/converter-module-0.1.1.tgz",
     "lucide-react": "^0.541.0",
+    "motion": "^12.23.16",
     "next": "15.5.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
